--- a/intro_to_data_analysis/L1_Starter_Code.ipynb
+++ b/intro_to_data_analysis/L1_Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
        " u'status': u'canceled'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +100,7 @@
        " u'status': u'canceled'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
        " u'utc_date': datetime.datetime(2015, 1, 9, 0, 0)}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +188,7 @@
        " u'processing_state': u'EVALUATED'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,9 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -222,7 +222,29 @@
     "#####################################\n",
     "\n",
     "## Find the total number of rows and the number of unique students (account keys)\n",
-    "## in each table."
+    "## in each table.\n",
+    "\n",
+    "### For each of these three tables, find the number of rows in the table and\n",
+    "### the number of unique students in the table. To find the number of unique\n",
+    "### students, you might want to create a set of the account keys in each table.\n",
+    "\n",
+    "def get_number(input_list):\n",
+    "    return len(input_list)\n",
+    "\n",
+    "def get_unique_number(input_list, field_name):\n",
+    "    new_set = set()\n",
+    "    for record in input_list:\n",
+    "        new_set.add(record[field_name])\n",
+    "    return len(new_set)\n",
+    "\n",
+    "enrollment_num_rows = get_number(enrollments)             # Replace this with your code\n",
+    "enrollment_num_unique_students = get_unique_number(enrollments, 'account_key')  # Replace this with your code\n",
+    "\n",
+    "engagement_num_rows = get_number(daily_engagement)             # Replace this with your code\n",
+    "engagement_num_unique_students = get_unique_number(daily_engagement, 'acct')  # Replace this with your code\n",
+    "\n",
+    "submission_num_rows = get_number(project_submissions)            # Replace this with your code\n",
+    "submission_num_unique_students = get_unique_number(project_submissions, 'account_key')  # Replace this with your code"
    ]
   },
   {
